# rye_dezero

./: .gitignore  README.md  pyproject.toml
src/dezero/: __init__.py  core.py  core_simple.py  dataloaders.py  functions.py  layers.py  transforms.py  utils.py
src/dezero/datasets/: BigData.py  Dataset.py  MNIST.py  Spiral.py  __init__.py  toy_dataset.py
src/dezero/layers/: Layer.py  Linear.py  TwoLayerNet.py  __init__.py
src/dezero/models/: BaseModel.py  MLP.py  __init__.py
src/dezero/optimizers/: Adam.py  MomentumSGD.py  Optimizer.py  SGD.py  __init__.py
src/steps/: step23.py  step27.py  step28.py  step29.py  step33.py  step34.py  step35.py  step36.py  step37.py  step38.py  step41.py  step42.py  step43.py  step44.py  step45.py  step46.py  step47.py  step48.py  step49.py  step50.py  step51.py  step52.py
tests/: test_funcs.py
