[project]
name = "dezero"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fukuba-shuma", email = "calculus.fukuba@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "pytest>=7.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true
